[package]
name = "lspower"
version = "0.13.3"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>", "RSLint developers"]
edition = "2018"
description = "Language Server Protocol implementation based on Tower"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rslint/lspower"
repository = "https://github.com/rslint/lspower"
documentation = "https://docs.rs/lspower/"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["language-server", "lsp", "tower"]
exclude = ["./lspower-macros"]

[features]
default = ["proposed"]
proposed = ["lsp-types/proposed"]

[dependencies]
async-trait = "0.1"
auto_impl = "0.4"
bytes = "0.5"
dashmap = "3.5.1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
log = "0.4"
lsp-types = "0.85"
nom = { version = "5.1", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["rt-core"] }
tokio-util = { version = "0.3", features = ["codec"] }
lspower-macros = { version = "0.3", path = "./lspower-macros" }
tower-service = "0.3"

[dev-dependencies]
env_logger = "0.8"
tokio = { version = "0.2", features = ["io-std", "io-util", "macros", "net", "test-util"] }
tower-test = "0.3"

[workspace]
members = [".", "./lspower-macros"]
default-members = ["."]
